--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
 - make
 - sudo make install
 - cd ../
+- sudo mkdir -p /usr/local/openresty/nginx/{logs,lock,run,client_body_temp,fastcgi_temp,proxy_temp,scgi_temp,uwsgi_temp}
 - export PATH=/usr/local/openresty/bin:/usr/local/openresty/nginx/sbin:$PATH
 
 # Test
